force-app/main/default/objects/PipelineStep__c/PipelineStep__c.object-meta.xml
<CustomObject>
    <label>PipelineStep</label>
    <nameField>
        <displayFormat>PSt-{0000}</displayFormat>
        <label>PipelineStep Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PipelineSteps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>