force-app/main/default/objects/PipelineStep__c/fields/Next_Step_Id_On_Pass__c.field-meta.xml
<CustomField>
    <fullName>Next_Step_Id_On_Pass__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Next Step Id On Pass</label>
    <referenceTo>PipelineStep__c</referenceTo>
    <relationshipName>PipelineSteps</relationshipName>
    <type>Lookup</type>
</CustomField>