force-app/main/default/objects/PipelineStep__c/fields/Peer_Review_Options__c.field-meta.xml
<CustomField>
    <fullName>Peer_Review_Options__c</fullName>
    <label>Peer Review Options</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>