force-app/main/default/objects/PipelineStep__c/fields/Step__c.field-meta.xml
<CustomField>
    <fullName>Step__c</fullName>
    <label>Step</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Deploy</fullName>
            </value>
            <value>
                <fullName>Validate</fullName>
            </value>
            <value>
                <fullName>Rollback</fullName>
            </value>
            <value>
                <fullName>WebHook</fullName>
            </value>
            <value>
                <fullName>Backup</fullName>
            </value>
            <value>
                <fullName>Execute Apex</fullName>
            </value>
            <value>
                <fullName>AccelQ</fullName>
            </value>
            <value>
                <fullName>Peer Review</fullName>
            </value>
            <value>
                <fullName>Manual Step</fullName>
            </value>
            <value>
                <fullName>Lock Branch</fullName>
            </value>
            <value>
                <fullName>Unlock Branch</fullName>
            </value>
            <value>
                <fullName>Change Branch Record Type</fullName>
            </value>
            <value>
                <fullName>Overwrite Protection</fullName>
            </value>
            <value>
                <fullName>Automation Step</fullName>
            </value>
            <value>
                <fullName>PreDeploy Fix</fullName>
            </value>
            <value>
                <fullName>Commit to Source</fullName>
            </value>
            <value>
                <fullName>Pause</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>